--- a/Tarefas/Tarefas.Android/Tarefas.Android.csproj
+++ b/Tarefas/Tarefas.Android/Tarefas.Android.csproj
@@ -151,5 +151,8 @@
   <ItemGroup>
     <AndroidResource Include="Resources\drawable\back.png" />
   </ItemGroup>
+  <ItemGroup>
+    <AndroidResource Include="Resources\drawable\calendar.png" />
+  </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath)\Xamarin\Android\Xamarin.Android.CSharp.targets" />
 </Project>
